--- a/multi-step-form/src/index.css
+++ b/multi-step-form/src/index.css
@@ -25,7 +25,7 @@
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100lvh;
 }
 
 @media only screen and (min-width: 801px) {
@@ -37,6 +37,7 @@ body {
 
 @media only screen and (max-width: 801px) {
   body {
-    margin-top: 10rem;
+    min-height: 100%;
+    margin: 10rem 0;
   }
 }
